[package]
name = "ToyMine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
cron = { version = "0.15", features = ["serde"] }
erased-serde = "0.4"
infer = "0.19"
regex = "1.12"
rustic_backend = "0.5"
rustic_core = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "7.4"
