[package]
name = "ToyMine"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async
arc-swap = "1.8"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serde
erased-serde = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
cron = { version = "0.15", features = ["serde"] }
regex = "1.12"
uuid = { version = "1.21", features = ["v4"] }

# File
hex = "0.4"
infer = "0.19"
percent-encoding = "2.3"
sha2 = "0.10"
zip = "8.0"

# HTTP Client
nyquest = { version = "0.4", features = ["async", "async-stream"] }
nyquest-preset = { version = "0.4", features = ["async", "async-stream"] }

# Backup
rustic_backend = "0.6"
rustic_core = "0.10"

# Telemetry
console-subscriber = { version = "0.5", optional = true }
dhat = { version = "0.3", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing-flame = { version = "0.2", optional = true }


[features]
default = []
telemetry = ["console-subscriber", "tracing-chrome", "tracing-flame", "dhat"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
